--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: chengxd3@gmail.com
 description: "About Mobile App develop"
 keyword: ""
 url: "https://stevendxc.github.io/Blog/"              # your host, for absolute URL
-baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "https://stevendxc.github.io/Blog/"                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
