--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ header-img: img/home-bg.jpg
 email: chengxd3@gmail.com
 description: "About Mobile App develop"
 keyword: ""
-url: "https://stevendxc.github.io/Blog"              # your host, for absolute URL
-baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
+url: ""              # your host, for absolute URL
+baseurl: "https://stevendxc.github.io/Blog"                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
