--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: chengxd3@gmail.com
 description: "About Mobile App develop"
 keyword: ""
 url: ""              # your host, for absolute URL
-baseurl: "https://stevendxc.github.io/Blog"                             # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "host/blog'https://stevendxc.github.io/Blog"                             # for example, '/blog' if your blog hosted on 'host/blog'https://stevendxc.github.io/Blog
 
 
 
@@ -22,11 +22,11 @@ twitter_username:   chengxd
 
 
 # Build settings
-# from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
-# permalink: pretty
-# paginate: 5
-# exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
-# anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+#from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
+permalink: pretty
+paginate: 5
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 
 
