--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: chengxd3@gmail.com
 description: "About Mobile App develop"
 keyword: ""
 url: "https://stevendxc.github.io/Blog/"              # your host, for absolute URL
-baseurl: "https://stevendxc.github.io/Blog"                             # for example, '/blog' if your blog hosted on 'host/blog'https://stevendxc.github.io/Blog
+baseurl: "/Blog"                             # for example, '/blog' if your blog hosted on 'host/blog'https://stevendxc.github.io/Blog
 
 
 
@@ -29,7 +29,7 @@ gems: [jekyll-paginate,jekyll-gist]
 #from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
-paginate: 10
+paginate: 20
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true
                         # if you want to customize anchor. check out line:181 of `post.html`
