--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Steven's Blog
+title: App develop note
 SEOTitle:  Index
 header-img: img/home-bg.jpg
 email: chengxd3@gmail.com
