--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
-title: App develop note
+title: "App develop note"
+SEOTitle: Index
 header-img: img/home-bg.jpg
 email: chengxd3@gmail.com
 description: "About Mobile App develop"
