--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: "App develop note"
-SEOTitle: Index
+SEOTitle: "Index"
 header-img: img/home-bg.jpg
 email: chengxd3@gmail.com
 description: "About Mobile App develop"
-keyword: ""
+keyword: "App develop design"
 url: "https://stevendxc.github.io/Blog/"      # your host, for absolute URL
 baseurl: "/Blog"                              # for example, '/blog' if your blog hosted on 'host/blog'https://stevendxc.github.io/Blog
 
