--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "About Mobile App develop"
 keyword: "App develop design"
 url: "https://stevendxc.github.io/Blog/"      # your host, for absolute URL
 baseurl: "/Blog"                              # for example, '/blog' if your blog hosted on 'host/blog'https://stevendxc.github.io/Blog
-
+timezone: Europe/Amsterdam
 
 
 # SNS settings
