--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ anchorjs: true # if you want to customize anchor. check out line:181 of `post.ht
 # replace redcarpet to kramdown,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
 # document: http://jekyllrb.com/docs/configuration/#kramdown
-highlighter: pygments
+highlighter: rouge
 markdown: kramdown
 kramdown:
   input: GFM
